adjust padding -- previous value wasn't enough to prevent things from being hidden by the footer.
git-svn-id: file:///usr/src/myth/mythwww/www.mythtv.org@81 474a20e3-f028-0410-92a6-ca0ac9e30e78

--- a/htdocs/css/layout.css
+++ b/htdocs/css/layout.css
@@ -109,7 +109,7 @@
 
     #content {
         margin:             0px;
-        padding:            6em 2em 4.75em 2em;
+        padding:            6em 2em 7em 2em;
         width:              964px;
     }
 
